Save calendar selection on change instead of on exit

Ensures that the calendar selection is preserved even when
KOrganizer crashes or user kills it.

BUG: 483976
FIXED-IN: 24.02.2